Alteração do indice nos restantes ficheiros

--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="PortFólio.html" class="logo">
+								<a href="Index.html" class="logo">
 									<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title">PortFólio</span>
 								</a>
 
@@ -39,7 +39,7 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="PortFólio.html">Home</a></li>
+							<li><a href="Index.html">Home</a></li>
 							<li><a href="Curriculo.html">Currículo</a></li>
 							<li><a href="Gravura.html">Gravura</a></li>
 							<li><a href="Pintura.html">Pintura</a></li>
