Inclui um pequeno texto sobre a minha pessoa

--- a/Curriculo.html
+++ b/Curriculo.html
@@ -54,6 +54,7 @@
 					<div id="main">
 						<div class="inner">
 							<h2>Currículo</h2>
+							<p>O meu nome é Milene Barbosa, nasci a 1995 em Vila Franca de Xira, mas a minha terra de coração é Arruda dos Vinhos, o vale encantado a meia hora de Lisboa.<br>Atualmente estou a terminar a licenciatura em Artes Visuais e Tecnologias na Escola Superior de Educação de Lisboa.<br>Sou uma pessoa super curiosa, perfecionista e mente aberta. Adoro conhecer novos sítios, música, fotografia e moda.<br>Descobri esta minha paixão pela arte por volta dos meus dezasseis dezassete anos, um bocado por acaso quando tentei fazer um desenho igual a um que estava na internet e até não ficou muito mal. A partir daí foi um percurso virado para o lado das artes.<br>Neste site mostro alguns dos meus trabalhos tanto a nível das artes plásticas como a nível do design que tenho realizado até então, mas a área que mais adoro trabalhar é sem dúvida nas artes plásticas, pintar e esculpir, onde possa meter as mãos!</p>
 							<img src="images/Currículo Milene Barbosa2.jpg" alt="" />
 						</div>
 					</div>
